[package]
name = "anvil-reth"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
reth-db-mem = { git = "https://github.com/sfm-colab/reth", branch = "anvil-reth" }
reth-ethereum = { git = "https://github.com/sfm-colab/reth", branch = "anvil-reth", features = ["node", "node-api", "test-utils"] }
reth-engine-local = { git = "https://github.com/sfm-colab/reth", branch = "anvil-reth" }
reth-rpc-eth-api = { git = "https://github.com/sfm-colab/reth", branch = "anvil-reth" }
reth-rpc-eth-types = { git = "https://github.com/sfm-colab/reth", branch = "anvil-reth" }
reth-rpc-traits = "0.3"
reth-storage-api = { git = "https://github.com/sfm-colab/reth", branch = "anvil-reth" }
reth-transaction-pool = { git = "https://github.com/sfm-colab/reth", branch = "anvil-reth" }

alloy-consensus = "2"
alloy-dyn-abi = "1.5"
alloy-eips = "2"
alloy-network = "2"
alloy-rpc-types-anvil = "2"
futures-util = "0.3"
jsonrpsee = { version = "0.26", features = ["server", "macros"] }
alloy-primitives = "1.5"
alloy-rpc-types-engine = "2"
alloy-rpc-types-eth = "2"
alloy-signer = "2"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
eyre = "0.6"

[dev-dependencies]
serde_json = "1"
