[package]
name = "anvil-reth"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
reth-db-mem = { git = "https://github.com/sfm-colab/reth", branch = "feat-state-provider-interceptor-pr" }
reth-ethereum = { git = "https://github.com/sfm-colab/reth", branch = "feat-state-provider-interceptor-pr", features = ["node", "node-api"] }
reth-engine-local = { git = "https://github.com/sfm-colab/reth", branch = "feat-state-provider-interceptor-pr" }
reth-primitives-traits = "0.3"
reth-rpc = { git = "https://github.com/sfm-colab/reth", branch = "feat-state-provider-interceptor-pr" }
reth-rpc-eth-api = { git = "https://github.com/sfm-colab/reth", branch = "feat-state-provider-interceptor-pr" }
reth-rpc-eth-types = { git = "https://github.com/sfm-colab/reth", branch = "feat-state-provider-interceptor-pr" }
reth-rpc-traits = "0.3"
reth-storage-api = { git = "https://github.com/sfm-colab/reth", branch = "feat-state-provider-interceptor-pr" }
reth-transaction-pool = { git = "https://github.com/sfm-colab/reth", branch = "feat-state-provider-interceptor-pr" }
reth-trie = { git = "https://github.com/sfm-colab/reth", branch = "feat-state-provider-interceptor-pr" }

alloy-consensus = "2"
alloy-dyn-abi = "1.5"
alloy-eips = "2"
alloy-network = "2"
alloy-rpc-types-anvil = "2"
futures-util = "0.3"
jsonrpsee = { version = "0.26", features = ["server", "macros"] }
alloy-primitives = "1.5"
alloy-rpc-types-engine = "2"
alloy-rpc-types-eth = "2"
alloy-signer = "2"
parking_lot = "0.12"
revm-database = "13"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
eyre = "0.6"

[dev-dependencies]
reth-ethereum = { git = "https://github.com/sfm-colab/reth", branch = "feat-state-provider-interceptor-pr", features = ["node", "node-api", "test-utils"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "debuginfo"
panic = "abort"
codegen-units = 16

[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1
